--- a/main.html
+++ b/main.html
@@ -15,7 +15,7 @@
         <div class="row">
             <div class="offset-md-3 col-md-6">
                 <h1 class="text-center text-success">
-                    Main page
+                    Main page of git example
                 </h1>
             </div>
         </div>
